# cortex-m-examples

./: Cargo.toml  Justfile  README.md  memory.x
.cargo/: config.toml
examples/: allocator.rs  device.rs  exception.rs  hello.rs  panic.rs  rtwins.rs  rtwins_tui.rs  test_on_host.rs
examples/tui_full/: main.rs  pal_semihosting.rs
examples/tui_mini/: main.rs  pal_semihosting.rs
